# J.A.R.V.I.S

./: .bash  .dockerignore  .env.example  .eslintrc.js  .gitignore  .gitnore  .prettierrc  .txt  BUILD.md  CMakeLists.txt  CMakePresets.json  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  __init__.py  ai_architecture.md  build.ps1  build.sh  build_debug.ps1  build_frontend.bat  cmake_configure.log.errors  config.yaml  cpp_extensions.py  data.json  debug_llm.py  error_log.txt  imgui.ini  index.html  jarvis.sln  jarvis_system.Ini  main.py  main_ml_components.py  model.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  random.md  readme.md  (+17 more)
agents/: assistant_agent.py  base_agent.py
ai/: coordinator.py  registry.py
ai/agents/: __init__.py  coordinator.py  planner_agent.py  search_agent.py  task_agent.py
ai_trainings_data/: config.json  gebruikers.json  nederlandse_woorden.txt  nlp_dataset.jsonl  technische_termen.csv
ai_trainingsdata/: afbeelding_labels.json  embeddings.npy  engelse_woorden.txt  labels_matrix.npy  producten.json  tekstcorpus.txt  trainingsdata.csv
ai_trainingsdata/prompt_data/: nl_prompts.json
ai_trainingsdata/spraakdataset/: transcripties.txt
bluetooth_health/: README.md  __init__.py  api.py  cli.py  core.py  requirements.txt  setup.py
cmake/: JarvisCppConfig.cmake  ModuleCMakeLists.txt.in  ModuleConfig.cmake.in  ModuleTemplate.cmake.in  PythonModuleTemplate.py.in
code/: app.py  index.html
config/: config.yaml  config_validator.py  connections.yaml  database.py  dependencies.py  dutch_models.yaml  language_training.json  llm.yaml  llm_config.py  logging_config.yaml  main.json  manager.py  project_structure.py  sandbox_config.yaml  server.json  validation_schemas.py
config/defaults/: command_schema.json  config.json  core.json  database.json  llm.json  ml.json  ui.json
config/env/: dev.yaml  prod.yaml
config/integrations/: outlook.json
config/model/: model_config.yaml
config/schema/: llm_config_schema.json  nlp_config_schema.json
core/: __init__.py  constants.py  cpp_wrapper.py  decision_engine.py  file_manager.py  jarvis_brain.py  learning_module.py  logging.py  memory_manager.py  module_connector.py  session.py
cpp/: CMakeLists.txt
cpp/include/jarvis/: core.hpp
cpp/python/: core_bindings.cpp
cpp/src/: core.cpp
data/: README.md  __init__.py  config.yaml  connector.py  data,csv  data_audit_report.md  dataset_summary.md  generate_datasets.py  knowledge.db  llm_data.py  loader.py  manager.py  ml_data.py  nlp_data.py  structure.sh  users.json
db/: __init__.py  database.py  database_manager.py  manager.py  model_store.py  models.py  structure.sh
deployment/: Dockerfile  docker-compose.yml  structure.sh
dj-200-set-insta-website/: data.json  index.html  login.html  register.html  script.js  server.py  style.css
docker/: README.md  docker-compose.yml
docs/: jarvis.md  structuur.md
enter/: enter.sqlproj
examples/: collect_ml_data.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
hyperadvanced_ai/: README.md  __init__.py  setup.py
hyperadvanced_ai/advanced_nn/cpp/: CMakeLists.txt  advanced_neural_net.cpp  advanced_neural_net.hpp  pybindings.cpp
iron_man/: README.md
jarvis/: __init__.py
jarvis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lang_learner/: __init__.py  dummy_grammar.py  dummy_pronunciation.py  grammar.py  language_coach.py  pronunciation.py  trainer.py  types.py  vocabulary.py  vocabulary_interface.py
llm/: LLM.py  __init__.py  config.py  core.py  exceptions.py  inference.py  language_processor.py  llm_processor.py  manager.py  memory.py  pipeline.py  processor.py  templates.py  tokens.py  virtual_environment.py
logs/: events.out.tfevents.1757095211.u-moeke1.40660.0  events.out.tfevents.1757095378.u-moeke1.49116.0  events.out.tfevents.1757095515.u-moeke1.28956.0  events.out.tfevents.1757095673.u-moeke1.49016.0  events.out.tfevents.1757095700.u-moeke1.44364.0  events.out.tfevents.1757096992.u-moeke1.25516.0  events.out.tfevents.1757097095.u-moeke1.35656.0  events.out.tfevents.1757097177.u-moeke1.32600.0  events.out.tfevents.1757097254.u-moeke1.26152.0
math_ops/cpp/: CMakeLists.txt  math_ops.cpp
ml/: __init__.py  data_collector.py  data_integrator.py  data_processor.py  model_manager.py  training.py
models/: README.md  __init__.py  base.py  build_ext.py  database.py  jarvis.py  model.py  setup.py  utils.py
models/cpp/: CMakeLists.txt  jarvis.cpp  jarvis.h  jarvis_model.cpp  jarvis_model.h  python_bindings.cpp
my_new_module/: my_new_module_cpp.py
my_new_module/cpp/tests/: CMakeLists.txt  test_my_new_module.cpp
nlp/: README.md  __init__.py  base.py  build.py  cpp_engine.py  language_processor.py  pipeline.py  processor.py  requirements.txt  setup.py
nlp/cpp/: CMakeLists.txt  __init__.py  nlp_engine.cpp  nlp_engine.hpp  pybindings.cpp
optimizer/: ml_optimization.py  model_optimizer.py
quantum_computing/: quantum_simulator.py
scripts/: build_cpp.py  cleanup.sh  create_cpp_module.py  move_files.sh  setup_cpp_module.py  setup_project_structure.sh
security/: __init__.py  config.py  secure_data_handler.py
server/: README.md  __init__.py  ai.py  api_maker.py  app.py  auth.py  compat.py  config.py  config_models.py  launcher.py  new_app.py  requirements.txt  run_new_server.py  run_server.py  system.py  update_deps.py  websocket.py  websocket_handler.py  websocket_server.py
system/: diagnostic_launcher.py
tests/: README.md  __init__.py  base.py  config.py  conftest.py  index.html  jarvis.py  python-bridge.js  script.js  script.js.bak  style.css  test_client.py  test_health.py  test_integration.py  test_jarvis_integration.py  test_jarvis_models.py  test_model_jarvis.py  test_nlp_components.py  test_websocket.py  websocket_server.py
tools/: data_auditor.py  data_logger.py  run_data_audit.py
ui/: __init__.py  api_client.py  screen.py
utils/: data_scraper.py  helpers.py
virtual_environment/: sandbox.py  scenario_generator.py  trainer.py
web/: index.html
(+900 files in other folders)
