[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.1.0"
description = "JARVIS AI Assistant"
requires-python = ">=3.8"
dependencies = [
    "transformers",
    "torch",
    "numpy",
    "pyopengl",
    "pygame"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis*"]

[tool.setuptools.package-dir]
"" = "."
