[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "." }
packages = find:
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hyperadvanced_ai", "hyperadvanced_ai.*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[project]
name = "jarvis"
version = "0.1.0"
description = "JARVIS AI Assistant"
requires-python = ">=3.8"

[project.dependencies]
# Core ML
"torch" = ">=2.0.0,<3.0.0"
"transformers" = ">=4.30.0,<5.0.0"
"accelerate" = ">=0.20.0,<1.0.0"
"numpy" = ">=1.24.0,<2.0.0"
"pandas" = ">=2.0.0,<3.0.0"
"scikit-learn" = ">=1.0.0,<2.0.0"

# Core utilities
"PyYAML" = ">=6.0,<7.0"
"tqdm" = ">=4.65.0,<5.0.0"
"psutil" = ">=5.9.0,<6.0.0"

# Web framework
"fastapi" = ">=0.95.0,<1.0.0"
"uvicorn[standard]" = ">=0.22.0,<1.0.0"
"pydantic" = ">=1.10.7,<3.0.0"
"python-multipart" = ">=0.0.6,<1.0.0"
"python-jose[cryptography]" = ">=3.3.0,<4.0.0"
"passlib[bcrypt]" = ">=1.7.4,<2.0.0"
"pyjwt" = ">=2.6.0,<3.0.0"
"bcrypt" = ">=4.0.1,<5.0.0"
"aiofiles" = ">=23.1.0,<24.0.0"
"jinja2" = ">=3.1.2,<4.0.0"
"python-dotenv" = ">=1.0.0,<2.0.0"

# Database
"sqlalchemy" = ">=2.0.0,<3.0.0"
"alembic" = ">=1.11.0,<2.0.0"
"pymongo" = ">=4.3.0,<5.0.0"

# NLP
"nltk" = ">=3.6.0,<4.0.0"
"nltk-data" = ">=2023.0.0,<2024.0.0"
"langdetect" = ">=1.0.9,<2.0.0"

# Networking & Async
"requests" = ">=2.31.0,<3.0.0"
"websockets" = ">=12.0,<13.0"
"aiohttp" = ">=3.9.3,<4.0.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pylint>=3.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_context = true
pretty = true
show_column_numbers = true
show_error_end = true

[tool.setuptools.package-dir]
"" = "."
